update xu ly